mdapi/unpackaged/objects/Basecamp_Questionnaire__c.object
<CustomObject>
    <fields>
        <fullName>Context__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Context</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Number_Answers_Per_Question__c</fullName>
        <defaultValue>4</defaultValue>
        <label>No. Answers per Question</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_Questions__c</fullName>
        <defaultValue>5</defaultValue>
        <description>The number of questions in the questionaire</description>
        <label>No. Questions</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Questionnaire</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Questionnaires</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>